# therapy-assistant-agent

./: .env.production  .gitignore  ASYNC_IMPROVEMENTS.md  DEVELOPMENT_TASKS.md  PRD_Therapy_Assistant_Agent.md  README-production.md  README.md  SERVER_ACCESS.md  alembic.ini  data_validation_report.md  docker-compose.yml  init-db.sql  start_async_server.sh  start_server.sh  synthetic_clinical_cases.json  synthetic_data_generator.py  test_basic_setup.py  test_chroma_setup.py  test_server.py
backend/: .env.example  .env.production  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_current.txt  run_tests.py  test_simple.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py  main_auth.py  main_auth_async.py  main_chroma.py  main_rag.py  main_simple.py  main_simple_chroma.py  main_web.py
backend/app/api/: __init__.py
backend/app/api/auth/: auth_endpoints.py
backend/app/api/v1/: rag_endpoints.py
backend/app/api/voice/: __init__.py  voice_endpoints.py
backend/app/config/: data_sources.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py
backend/app/mcp/: mcp_server.py
backend/app/services/: async_file_service.py  async_http_service.py  audio_analysis.py  data_acquisition.py  knowledge_base.py  knowledge_base_chroma.py  openai_service.py  optimized_audio_analysis.py  vector_database.py  vector_database_chroma.py  vector_database_simple.py
backend/app/static/: voice-recorder.js
backend/app/templates/: base.html  cases.html  dashboard.html  diagnostic.html  error.html  login.html  treatment.html
backend/app/utils/: data_loader.py  security.py  validators.py
backend/data/knowledge/: clinical_knowledge_base.json
backend/data/synthetic/: synthetic_clinical_cases.json
backend/scripts/: lint_and_optimize.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_api_integration.py
backend/tests/unit/: test_audio_analysis.py  test_auth_endpoints.py  test_database_models.py  test_utility_functions.py  test_voice_endpoints.py  test_web_routes.py
docs/: DEVELOPMENT_TASKS.md  PHASE5_DATA_INTEGRATION_PLAN.md  PHASE7_VOICE_ANALYSIS.md  PHASE8_LLM_RAG_OPTIMIZATION.md
frontend/: Dockerfile  Dockerfile.prod  capacitor.config.ts  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  App.vue  index.tsx
frontend/src/components/: Layout.tsx  LicensedRoute.tsx  PrivateRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CaseAnalysis.tsx  CaseAnalysis.vue  Dashboard.tsx  Dashboard.vue  DiagnosticAssistant.tsx  DiagnosticAssistant.vue  Login.tsx  Login.vue  TreatmentPlanning.tsx  TreatmentPlanning.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend_python/: Dockerfile  app.py  requirements.txt
frontend_python/static/css/: style.css
frontend_python/static/js/: app.js
frontend_python/templates/: base.html  dashboard.html  error.html
migrations/: env.py
mobile/: README.md  app.json  build-android.sh  build-ios.sh  package.json  tsconfig.json
mobile/src/: App.tsx
mobile/src/components/: VoiceRecorder.tsx
mobile/src/contexts/: AuthContext.tsx
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: CasesScreen.tsx  DashboardScreen.tsx  DiagnosticScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  TreatmentScreen.tsx
mobile/src/services/: api.ts  voiceService.ts
mobile/src/theme/: theme.ts
mobile/src/types/: index.ts
nginx/: therapy.conf
scripts/: download_clinical_data.py  setup_database.py  test_api_endpoints.py
terraform/: CHANGELOG.md  README.md  compute.tf  database.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  variables.tf
terraform/environments/dev/: terraform.tfvars
terraform/environments/prod/: terraform.tfvars
terraform/environments/staging/: terraform.tfvars
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/scripts/: build-and-deploy.sh  deploy.sh
